err_assemble.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :domain:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :domain:compileKotlin UP-TO-DATE
> Task :domain:compileJava NO-SOURCE
> Task :domain:processResources NO-SOURCE
> Task :domain:classes UP-TO-DATE
> Task :domain:jar UP-TO-DATE
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :data:preBuild UP-TO-DATE
> Task :data:preDebugBuild UP-TO-DATE
> Task :data:writeDebugAarMetadata UP-TO-DATE
> Task :player:preBuild UP-TO-DATE
> Task :player:preDebugBuild UP-TO-DATE
> Task :player:writeDebugAarMetadata UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :data:generateDebugResValues UP-TO-DATE
> Task :data:generateDebugResources UP-TO-DATE
> Task :data:packageDebugResources UP-TO-DATE
> Task :player:generateDebugResValues UP-TO-DATE
> Task :player:generateDebugResources UP-TO-DATE
> Task :player:packageDebugResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :data:extractDeepLinksDebug UP-TO-DATE
> Task :data:processDebugManifest UP-TO-DATE
> Task :player:extractDeepLinksDebug UP-TO-DATE
> Task :player:processDebugManifest UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :data:compileDebugLibraryResources UP-TO-DATE
> Task :data:parseDebugLocalResources UP-TO-DATE
> Task :data:generateDebugRFile UP-TO-DATE
> Task :player:compileDebugLibraryResources UP-TO-DATE
> Task :player:parseDebugLocalResources UP-TO-DATE
> Task :player:generateDebugRFile UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :data:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :data:kspDebugKotlin UP-TO-DATE
> Task :data:compileDebugKotlin UP-TO-DATE
> Task :data:javaPreCompileDebug UP-TO-DATE
> Task :data:compileDebugJavaWithJavac UP-TO-DATE
> Task :data:copyRoomSchemas NO-SOURCE
> Task :data:transformDebugClassesWithAsm UP-TO-DATE
> Task :data:bundleLibCompileToJarDebug UP-TO-DATE
> Task :player:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :player:kspDebugKotlin UP-TO-DATE
> Task :player:compileDebugKotlin UP-TO-DATE
> Task :player:javaPreCompileDebug UP-TO-DATE
> Task :player:compileDebugJavaWithJavac UP-TO-DATE
> Task :player:transformDebugClassesWithAsm UP-TO-DATE
> Task :player:bundleLibCompileToJarDebug UP-TO-DATE
> Task :app:kspDebugKotlin UP-TO-DATE
> Task :app:compileDebugKotlin UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:compileDebugJavaWithJavac UP-TO-DATE
> Task :app:mergeDebugShaders UP-TO-DATE
> Task :app:compileDebugShaders NO-SOURCE
> Task :app:generateDebugAssets UP-TO-DATE
> Task :data:mergeDebugShaders UP-TO-DATE
> Task :data:compileDebugShaders NO-SOURCE
> Task :data:generateDebugAssets UP-TO-DATE
> Task :data:packageDebugAssets UP-TO-DATE
> Task :player:mergeDebugShaders UP-TO-DATE
> Task :player:compileDebugShaders NO-SOURCE
> Task :player:generateDebugAssets UP-TO-DATE
> Task :player:packageDebugAssets UP-TO-DATE
> Task :app:mergeDebugAssets UP-TO-DATE
> Task :app:compressDebugAssets UP-TO-DATE
> Task :data:bundleLibRuntimeToJarDebug UP-TO-DATE
> Task :player:bundleLibRuntimeToJarDebug UP-TO-DATE
> Task :app:desugarDebugFileDependencies UP-TO-DATE
> Task :app:hiltAggregateDepsDebug UP-TO-DATE

> Task :app:hiltJavaCompileDebug
C:\Users\david\.gemini\antigravity\scratch\iptv-player\app\build\generated\hilt\component_sources\debug\com\streamvault\app\StreamVaultApp_HiltComponents.java:155: error: [Dagger/MissingBinding] com.google.gson.Gson cannot be provided without an @Inject constructor or an @Provides-annotated method.
  public abstract static class SingletonC implements StreamVaultApp_GeneratedInjector,
                         ^
  
      com.google.gson.Gson is injected at
          [com.streamvault.app.StreamVaultApp_HiltComponents.SingletonC] com.streamvault.data.manager.BackupManagerImpl(…, gson)
      com.streamvault.data.manager.BackupManagerImpl is injected at
          [com.streamvault.app.StreamVaultApp_HiltComponents.SingletonC] com.streamvault.app.di.RepositoryModule.bindBackupManager(impl)
      com.streamvault.domain.manager.BackupManager is injected at
          [com.streamvault.app.StreamVaultApp_HiltComponents.ViewModelC] com.streamvault.app.ui.screens.settings.SettingsViewModel(…, backupManager)
      com.streamvault.app.ui.screens.settings.SettingsViewModel is injected at
          [com.streamvault.app.StreamVaultApp_HiltComponents.ViewModelC] com.streamvault.app.ui.screens.settings.SettingsViewModel_HiltModules.BindsModule.binds(arg0)
      @dagger.hilt.android.internal.lifecycle.HiltViewModelMap java.util.Map<java.lang.Class<?>,javax.inject.Provider<androidx.lifecycle.ViewModel>> is requested at
          [com.streamvault.app.StreamVaultApp_HiltComponents.ViewModelC] dagger.hilt.android.internal.lifecycle.HiltViewModelFactory.ViewModelFactoriesEntryPoint.getHiltViewModelMap() [com.streamvault.app.StreamVaultApp_HiltComponents.SingletonC → com.streamvault.app.StreamVaultApp_HiltComponents.ActivityRetainedC → com.streamvault.app.StreamVaultApp_HiltComponents.ViewModelC]
1 error

> Task :app:hiltJavaCompileDebug FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:hiltJavaCompileDebug'.
> Compilation failed; see the compiler error output for details.

* Try:
> Run with --info option to get more log output.
> Run with --scan to get full insights.

BUILD FAILED in 7s
61 actionable tasks: 1 executed, 60 up-to-date
